--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,19 @@ body {
     /* width: auto; */
 }
 
+table {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+}
+
 tbody {
     background-color: white;
 }
 
-.profile-pic-small {
-    max-width: 25%;
+.request-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 600px;
 }
-
